# kindle-sender

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: mod.rs  send.rs
src/models/: azure.rs  config.rs  error.rs  kindle.rs  mod.rs
src/services/: azure_service.rs  config_service.rs  file_service.rs  kindle_service.rs  mod.rs  send_service.rs
