[package]
name = "kindle-sender"
version = "0.1.0"
edition = "2024"

# Default optimizations for all profiles
[profile.dev]
opt-level = 1      # Basic optimizations for dev
codegen-units = 16 # Default for faster compiles
debug = true       # Keep debug info
strip = false      # Keep debug info

[profile.release]
opt-level = "z"   # Optimize for size ("z" is smallest, "s" is a bit larger but faster)
lto = true        # Link-time optimization
codegen-units = 1 # Maximize performance and size optimization
panic = "abort"   # Remove panic unwinding code
strip = true      # Strip symbols from binary
debug = false     # No debug info

# Enable incremental compilation for dev builds
[profile.dev.package."*"]
incremental = true

# Use thin LTO for dependencies to speed up build
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
warp = "0.3.7"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
base64 = "0.22.1"
dirs = "6.0.0"
serde_json = "1.0.140"
chrono = "0.4.40"
log = "0.4.21"
env_logger = "0.11.3"
